--- a/src/css/universal.css
+++ b/src/css/universal.css
@@ -63,8 +63,19 @@ svg {
     margin-bottom: auto;
 }
 
+.logo{
+    margin-bottom: 1.5rem;
+}
+
+.logo-text{
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
 .nav-item{
     width: 100%;
+    height: 100%;
     padding: 0.5rem 0;
     transition: all 0.15s ease-in-out;
 }
@@ -80,14 +91,11 @@ svg {
     color: var(--Branco);
 }
 
-.nav-activate{
+.toggle-nav{
     display: none;
 }
 
-main{
-    margin-left: 464px; /* 384px + 5rem da navbar */
-    margin-right: 384px;
-}
+
 
 /* MEDIA QUERIES */
 
@@ -96,8 +104,12 @@ main{
 @media only screen and (max-width: 600px) {
     .navbar{
         top: 0;
+        left: -90vw;
+        position: fixed;
         width: 100vw;
         height: 4rem;
+        padding: 0;
+        border-radius: 0 10px 10px 0;
     }
 
     .navbar-nav{
@@ -105,25 +117,55 @@ main{
         justify-content: space-around;
         align-items: center;
         flex-direction: row;
+        height: 100%;
+    }
+
+    .logo{
+        display: none;
     }
 
     .nav-item{
+        display: flex;
+        justify-content: center;
+        align-items: center;
         padding: 0;
-        max-width: 2rem;
+        flex-grow: 1;
+        margin-left: auto;
     }
 
     .nav-link{
         height: 100%;
     }
 
-    .nav-activate{
-        display: block;
-        width: 2rem;
+    .toggle-nav{
+        display: flex;
+        justify-content: center;
+        transform: rotate(0deg);
+        transition: all 0.3s ease;
+        flex-grow: 1;
+        max-width: 10vw;
+        background-color: var(--Laranja);
+        border-radius: 0 10px 10px 0;
     }
+
+
+    .icon-arrow{
+        fill: var(--Branco);
+    }
+
 }
 
 /* TELAS GRANDES */
 @media only screen and (min-width: 601px) {
+    main{
+        margin-left: 464px; /* 384px + 5rem da navbar */
+        margin-right: 384px;
+    }
+
+    .navbar{
+        box-shadow: 4px 0 10px rgba(0, 0, 0, 25%);
+    }
+
     .nav-link svg{
         min-width: 2rem;
         margin: 0 1.5rem;
