--- a/src/css/universal.css
+++ b/src/css/universal.css
@@ -1,8 +1,13 @@
 /*
+    14px = 0.875rem
+    18px = 1.125rem
     20px = 1,25rem
-    24px = 1,5rem
-    40px = 2,5rem
+    24px = 1.5rem
+    36px = 2.25rem
+    40px = 2.5rem
     64px = 4rem
+    192px = 12rem
+    384px = 24rem
 */
 
 :root{
@@ -44,6 +49,20 @@ svg {
     color: var(--Branco);
 }
 
+/* CLASSES REUTILIZÁVEIS */
+
+.title{
+    font-size: 2.25rem;
+}
+
+.title-color{
+    text-transform: capitalize;
+    font-weight: bold;
+    color: var(--Laranja);
+}
+
+/* ---------------------------------------- */
+
 /* NAVBAR */
 
 .navbar{
@@ -52,6 +71,7 @@ svg {
     position: fixed;
     background-color: var(--Laranja);
     transition: all 0.3s ease;
+    z-index: 1;
 }
 
 .navbar-nav{
@@ -107,8 +127,8 @@ svg {
 
 .utility-wrapper{
     width: 100%;
-    padding-left: clamp(8px, 10vw, 464px); /* 384px + 5rem da navbar */
-    padding-right: clamp(8px, 10vw, 384px);
+    padding-left: clamp(4px, 10vw, 480px); /* 384px + 5rem da navbar + 8px de padding */
+    padding-right: clamp(4px, 10vw, 384px);
     background-color: var(--Vinho);
 }
 
@@ -137,10 +157,39 @@ svg {
     font-size: 1.25rem;
 }
 
-.utility{
+.utilities{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+}
+
+.search-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.search-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0 10px 10px 0;
+    background-color: var(--Branco);
+    padding-right: 12px;
+    border: none;
+}
+
+.search-input{
+    background-color: var(--Branco);
+    border: none;
+}
+
+.utility-icons{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
 }
 
 
@@ -152,9 +201,8 @@ svg {
 @media (max-width: 900px) {
     .navbar{
         top: 0;
-        left: -90vw;
+        left: -92vw;
         position: fixed;
-        z-index: 1;
         width: 100vw;
         height: 4rem;
         padding: 0;
@@ -192,11 +240,10 @@ svg {
         transform: rotate(0deg);
         transition: all 0.3s ease;
         flex-grow: 1;
-        max-width: 10vw;
+        max-width: 8vw;
         background-color: var(--Laranja);
         border-radius: 0 10px 10px 0;
     }
-
 
     .icon-arrow{
         fill: var(--Branco);
@@ -216,6 +263,22 @@ svg {
         display: none;
     }
 
+    .utility-icons{
+        gap: 0.5rem;
+    }
+}
+
+@media (max-width: 300px) {
+    .utility-icons{
+        gap: 0;
+    }
+}
+
+@media (max-width: 480px) {
+    .utility-icons svg{
+        width: 24px;
+        height: 24px;
+    }
 }
 
 /* TELAS GRANDES */
