--- a/src/css/universal.css
+++ b/src/css/universal.css
@@ -99,6 +99,7 @@ svg {
     text-transform: uppercase;
     font-weight: bold;
     font-size: 2rem;
+    text-wrap: nowrap;
 }
 
 .nav-item{
@@ -204,7 +205,7 @@ svg {
         left: -92vw;
         position: fixed;
         width: 100vw;
-        height: 4rem;
+        height: 91px;
         padding: 0;
         border-radius: 0 10px 10px 0;
     }
@@ -250,7 +251,17 @@ svg {
     }
 }
 
+@media (max-width: 725px) {
+    .navbar{
+        height: 121px;
+    }
+}
+
 @media (max-width: 600px) {
+    .navbar{
+        height: 88px;
+    }
+
     .promo-bar{
         justify-content: center;
     }
@@ -268,16 +279,16 @@ svg {
     }
 }
 
-@media (max-width: 300px) {
-    .utility-icons{
-        gap: 0;
-    }
-}
-
 @media (max-width: 480px) {
     .utility-icons svg{
         width: 24px;
         height: 24px;
+    }
+}
+
+@media (max-width: 300px) {
+    .utility-icons{
+        gap: 0;
     }
 }
 
