--- a/src/css/universal.css
+++ b/src/css/universal.css
@@ -274,6 +274,11 @@ svg {
         display: none;
     }
 
+    .utility-wrapper{
+        padding-left: 10vw;
+        padding-right: 1rem;
+    }
+
     .utility-icons{
         gap: 0.5rem;
     }
@@ -281,12 +286,16 @@ svg {
 
 @media (max-width: 480px) {
     .utility-icons svg{
-        width: 24px;
-        height: 24px;
+        width: 28px;
+        height: 28px;
     }
 }
 
-@media (max-width: 300px) {
+@media (max-width: 335px) {
+    .navbar{
+        height: 115px;
+    }
+
     .utility-icons{
         gap: 0;
     }
