--- a/src/css/universal.css
+++ b/src/css/universal.css
@@ -10,8 +10,9 @@
     384px = 24rem
 */
 
-:root{
+:root {
     --Branco: #fff;
+    --BrancoSuave: #f7f7f7;
     --Preto: #000;
     --Fundo: #F3E9DC;
     --Creme: #E3CAB1;
@@ -25,7 +26,7 @@
     --Hover: 0.15s;
 }
 
-*{
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -51,11 +52,11 @@ svg {
 
 /* CLASSES REUTILIZÁVEIS */
 
-.title{
+.title {
     font-size: 2.25rem;
 }
 
-.title-color{
+.title-color {
     text-transform: capitalize;
     font-weight: bold;
     color: var(--Laranja);
@@ -65,7 +66,7 @@ svg {
 
 /* NAVBAR */
 
-.navbar{
+.navbar {
     width: 5rem;
     height: 100vh;
     position: fixed;
@@ -74,7 +75,7 @@ svg {
     z-index: 1;
 }
 
-.navbar-nav{
+.navbar-nav {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -85,55 +86,56 @@ svg {
     margin-bottom: auto;
 }
 
-.logo{
+.logo {
     margin-bottom: 1.5rem;
     width: 100%;
 }
 
-.logo img{
+.logo img {
     width: 80px;
     height: 80px;
 }
 
-.logo-text{
+.logo-text {
     text-transform: uppercase;
     font-weight: bold;
     font-size: 2rem;
     text-wrap: nowrap;
 }
 
-.nav-item{
+.nav-item {
     width: 100%;
     height: 100%;
     padding: 0.5rem 0;
     transition: all 0.15s ease-in-out;
 }
 
-.nav-link{
+.nav-link {
     display: flex;
     align-items: center;
 }
 
-.link-text{
+.link-text {
     display: none;
     font-size: 1.25rem;
     color: var(--Branco);
 }
 
-.toggle-nav{
+.toggle-nav {
     display: none;
 }
 
 /* UTILITY-BAR */
 
-.utility-wrapper{
+.utility-wrapper {
     width: 100%;
-    padding-left: clamp(4px, 10vw, 480px); /* 384px + 5rem da navbar + 8px de padding */
+    padding-left: clamp(4px, 10vw, 480px);
+    /* 384px + 5rem da navbar + 8px de padding */
     padding-right: clamp(4px, 10vw, 384px);
     background-color: var(--Vinho);
 }
 
-.utility-bar{
+.utility-bar {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -142,7 +144,7 @@ svg {
     color: var(--Branco);
 }
 
-.promo-bar{
+.promo-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -153,25 +155,25 @@ svg {
     border-bottom: 1px solid var(--Branco);
 }
 
-.coupon{
+.coupon {
     font-weight: bold;
     font-size: 1.25rem;
 }
 
-.utilities{
+.utilities {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
 }
 
-.search-bar{
+.search-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.search-btn{
+.search-btn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -181,18 +183,92 @@ svg {
     border: none;
 }
 
-.search-input{
+.search-input {
     background-color: var(--Branco);
     border: none;
 }
 
-.utility-icons{
+.utility-icons {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
 }
 
+/*FOOTER*/
+
+.footer-container {
+    margin-top: 4rem;
+    background-color: var(--Azul);
+}
+
+.footer {
+    color: var(--BrancoSuave);
+    padding: 1rem;
+}
+
+.footer-sections {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.footer-section {
+    flex: 1 1 20%;
+    min-width: 200px;
+    text-align: center;
+    padding: 0.5rem;
+}
+
+.footer-brand h2 {
+    color: var(--Laranja);
+}
+
+.footer-section h3 {
+    font-size: 1.25rem;
+}
+
+.footer-section ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.footer-section ul li {
+    font-size: 1rem;
+    margin: 5px 0;
+}
+
+.footer-section ul li a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.footer-section ul li a i {
+    margin-right: 8px;
+}
+
+.flag-image {
+    max-width: 30%;
+    height: auto;
+}
+
+.footer-bottom {
+    border-top: 1px solid var(--BrancoSuave);
+    margin-top: 20px;
+    padding-top: 10px;
+    text-align: center;
+}
+
+@media (max-width: 768px) {
+    .footer-sections {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-section {
+        flex: 1 1 auto;
+    }
+}
 
 /* ------------------- MEDIA QUERIES ------------------- */
 
@@ -200,7 +276,7 @@ svg {
 /* TELAS PEQUENAS */
 
 @media (max-width: 900px) {
-    .navbar{
+    .navbar {
         top: 0;
         left: -92vw;
         position: fixed;
@@ -210,7 +286,7 @@ svg {
         border-radius: 0 10px 10px 0;
     }
 
-    .navbar-nav{
+    .navbar-nav {
         display: flex;
         justify-content: space-around;
         align-items: center;
@@ -218,11 +294,11 @@ svg {
         height: 100%;
     }
 
-    .logo{
+    .logo {
         display: none;
     }
 
-    .nav-item{
+    .nav-item {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -231,11 +307,11 @@ svg {
         margin-left: auto;
     }
 
-    .nav-link{
+    .nav-link {
         height: 100%;
     }
 
-    .toggle-nav{
+    .toggle-nav {
         display: flex;
         justify-content: center;
         transform: rotate(0deg);
@@ -246,31 +322,37 @@ svg {
         border-radius: 0 10px 10px 0;
     }
 
-    .icon-arrow{
+    .icon-arrow {
         fill: var(--Branco);
+    }
+
+    .footer-container {
+        padding-left: clamp(5rem, 10vw, 464px); /* 384px + 5rem da navbar */
+        padding-right: clamp(5rem, 10vw, 384px);
     }
 }
 
 @media (max-width: 725px) {
-    .navbar{
+    .navbar {
         height: 121px;
     }
 }
 
 @media (max-width: 600px) {
-    .navbar{
+    .navbar {
         height: 88px;
     }
 
-    .promo-bar{
+    .promo-bar {
         justify-content: center;
     }
 
-    .coupon{
+    .coupon {
         font-size: 18px;
     }
 
-    .promo-text, .socials{
+    .promo-text,
+    .socials {
         display: none;
     }
 
@@ -281,6 +363,11 @@ svg {
 
     .utility-icons{
         gap: 0.5rem;
+    }
+
+    .footer-container {
+        padding-left: clamp(4px, 5vw, 464px);
+        padding-right: clamp(4px, 5vw, 384px);
     }
 }
 
@@ -296,7 +383,7 @@ svg {
         height: 115px;
     }
 
-    .utility-icons{
+    .utility-icons {
         gap: 0;
     }
 }
@@ -304,33 +391,37 @@ svg {
 /* TELAS GRANDES */
 
 @media (min-width: 901px) {
-    .navbar{
+    .navbar {
         box-shadow: 4px 0 10px rgba(0, 0, 0, 25%);
     }
 
-    .nav-link svg{
+    .nav-link svg {
         min-width: 2rem;
         margin: 0 1.5rem;
     }
 
-    .navbar:hover{
+    .navbar:hover {
         width: 16rem;
     }
 
-    .navbar:hover .link-text{
+    .navbar:hover .link-text {
         display: block;
     }
-    
-    .nav-item:hover{
+
+    .nav-item:hover {
         background-color: var(--Branco);
     }
-    
-    .nav-item:hover svg{
-        color: var(--Preto);
-    }
-    
-    .nav-item:hover .link-text{
+
+    .nav-item:hover svg {
         color: var(--Preto);
     }
 
+    .nav-item:hover .link-text {
+        color: var(--Preto);
+    }
+
+    .footer-container {
+        padding-left: clamp(4px, 10vw, 464px); /* 384px + 5rem da navbar */
+        padding-right: clamp(4px, 10vw, 384px);
+    }
 }
