Mais pequenas correções da barra de utilitários

--- a/src/css/universal.css
+++ b/src/css/universal.css
@@ -126,11 +126,12 @@ svg {
 
 /* UTILITY-BAR */
 
-.utility-wrapper{
+.utility-container{
     width: 100%;
     padding-left: clamp(4px, 10vw, 480px); /* 384px + 5rem da navbar + 8px de padding */
     padding-right: clamp(4px, 10vw, 384px);
     background-color: var(--Vinho);
+    transition: all 0.3s ease;
 }
 
 .utility-bar{
@@ -156,6 +157,8 @@ svg {
 .coupon{
     font-weight: bold;
     font-size: 1.25rem;
+    text-wrap: nowrap;
+    overflow-x: scroll;
 }
 
 .utilities{
@@ -179,6 +182,10 @@ svg {
     background-color: var(--Branco);
     padding-right: 12px;
     border: none;
+}
+
+.search-btn:hover{
+    cursor: pointer;
 }
 
 .search-input{
@@ -205,7 +212,7 @@ svg {
         left: -92vw;
         position: fixed;
         width: 100vw;
-        height: 91px;
+        height: 85px;
         padding: 0;
         border-radius: 0 10px 10px 0;
     }
@@ -249,11 +256,24 @@ svg {
     .icon-arrow{
         fill: var(--Branco);
     }
+
+    .coupon{
+        font-size: 1rem;
+    }
+
+    .promo-text, .socials{
+        font-size: 0.875rem;
+    }
 }
 
 @media (max-width: 725px) {
-    .navbar{
-        height: 121px;
+    .utility-container{
+        padding-left: 10vw;
+        padding-right: 1rem;
+    }
+
+    .search-container{
+        width: 100%;
     }
 }
 
@@ -267,16 +287,11 @@ svg {
     }
 
     .coupon{
-        font-size: 18px;
+        font-size: 1.125rem;
     }
 
     .promo-text, .socials{
         display: none;
-    }
-
-    .utility-wrapper{
-        padding-left: 10vw;
-        padding-right: 1rem;
     }
 
     .utility-icons{
@@ -285,6 +300,19 @@ svg {
 }
 
 @media (max-width: 480px) {
+    .navbar{
+        height: 82px;
+    }
+
+    .utility-container{
+        padding-left: 10vw;
+        padding-right: 0.5rem;
+    }
+
+    .coupon{
+        font-size: 0.875rem;
+    }
+
     .utility-icons svg{
         width: 28px;
         height: 28px;
@@ -292,10 +320,6 @@ svg {
 }
 
 @media (max-width: 335px) {
-    .navbar{
-        height: 115px;
-    }
-
     .utility-icons{
         gap: 0;
     }
@@ -333,4 +357,7 @@ svg {
         color: var(--Preto);
     }
 
+    .search-input {
+        width: 384px;
+    }
 }
