--- a/src/css/universal.css
+++ b/src/css/universal.css
@@ -3,6 +3,7 @@
     18px = 1.125rem
     20px = 1,25rem
     24px = 1.5rem
+    28px = 1.75rem
     36px = 2.25rem
     40px = 2.5rem
     64px = 4rem
@@ -54,6 +55,8 @@ svg {
 
 .title {
     font-size: 2.25rem;
+    text-align: center;
+    margin-bottom: 4rem;
 }
 
 .title-color {
@@ -221,9 +224,9 @@ svg {
 }
 
 .footer-section {
-    flex: 1 1 20%;
+    flex: 1 1 0;
     min-width: 200px;
-    text-align: center;
+    text-align: start;
     padding: 0.5rem;
 }
 
@@ -263,17 +266,6 @@ svg {
     margin-top: 2rem;
     padding-top: 0.8rem;
     text-align: center;
-}
-
-@media (max-width: 768px) {
-    .footer-sections {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .footer-section {
-        flex: 1 1 auto;
-    }
 }
 
 /* ------------------- MEDIA QUERIES ------------------- */
@@ -343,6 +335,17 @@ svg {
     .footer-container {
         padding-left: clamp(5rem, 10vw, 464px); /* 384px + 5rem da navbar */
         padding-right: clamp(5rem, 10vw, 384px);
+    }
+}
+
+@media (max-width: 768px) {
+    .footer-sections {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-section {
+        flex: 1 1 auto;
     }
 }
 
@@ -442,7 +445,7 @@ svg {
     .search-input {
         width: 384px;
     }
-    
+
     .nav-item:hover .link-text {
         color: var(--Preto);
     }
