--- a/src/css/universal.css
+++ b/src/css/universal.css
@@ -68,6 +68,53 @@ svg {
     color: var(--Laranja);
 }
 
+.custom-button {
+    position: relative;
+    padding: 10px 20px;
+    background-color: var(--Fundo);
+    color: var(--Laranja);
+    border: 3px solid var(--Laranja);
+    border-radius: 0.7rem;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: bold;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px; /* ajustar conforme o tamanho final primeiro use "auto" */
+    transition: background-color 0.3s, color 0.3s;
+    overflow: hidden;
+}
+
+.custom-button .button-text {
+    transition: transform 0.3s;
+}
+
+.custom-button .button-icon {
+    display: none;
+    margin-left: 10px;
+}
+
+.custom-button .arrow-icon,
+.custom-button .catalog-icon,
+.custom-button .plus-icon {
+    width: 12px;
+    height: 12px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.custom-button .arrow-icon {
+    background-image: url('../elements/icons/icon-seta.svg');
+}
+
+.custom-button .catalog-icon {
+    background-image: url('../elements/icons/icon-catalogo.svg');
+    width: 16px;
+    height: 16px;
+}
+
 /* ---------------------------------------- */
 
 /* NAVBAR */
@@ -355,6 +402,10 @@ svg {
         padding-left: clamp(5rem, 10vw, 464px);
         padding-right: clamp(5rem, 10vw, 384px);
     }
+
+    .custom-button .button-icon {
+        display: block;
+    }
 }
 
 @media (max-width: 768px) {
@@ -472,5 +523,23 @@ svg {
     .footer-container {
         padding-left: clamp(4px, 10vw, 464px);
         padding-right: clamp(4px, 10vw, 384px);
+    }
+
+    .custom-button:hover {
+        background-color: var(--Laranja);
+        color: var(--BrancoSuave);
+    }
+    
+    .custom-button:hover .button-text {
+        transform: translateX(-10px);
+    }
+    
+    .custom-button:hover .button-icon {
+        display: block;
+    }
+    
+    .custom-button:hover .arrow-icon,
+    .custom-button:hover .catalog-icon {
+        transform: translateX(0);
     }
 }
