--- a/src/css/sobre.css
+++ b/src/css/sobre.css
@@ -13,66 +13,78 @@
     --Marrom: #511B06;
 }
 
-/*SEÇÃO 1*/
+body {
+    background-color: var(--Fundo);
+}
+
+/*SEÇÃO 1 e 2*/
 
 .brand-container {
     background-color: rgba(220, 114, 14, 0.7); /* 70% de opacidade */
     color: var(--BrancoSuave);
 }
 
-.sobre-secao {
+.profile-container {
+    background-color: var(--Fundo);
+    color: var(--Marrom);
+ }
+
+.brand-section,
+.profile-section {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 2rem;
 }
 
-.sobre-texto {
+.brand-logo,
+.profile-image {
+    max-width: 70%; /*ajustar caso queira maior*/
+}
+
+.profile-section img {
+    border-radius: 50%;
+}
+
+.brand-text,
+.profile-text {
     max-width: 60%;
 }
 
-.logo {
-    max-width: 150px;
+.brand-text h1 {
+    font-weight: bold;
 }
 
-/*FIM DA SEÇÃO*/
-
-/* Responsividade */
-/* @media (max-width: 1100px) {
-    .sobre-secao {
-        padding: 2rem 0;
-    }
-} */
-
-@media (max-width: 768px) {
-    .sobre-secao {
-        flex-direction: column;
-        text-align: center;
-        padding: 30px;
-    }
-
-    .sobre-texto {
-        max-width: 100%;
-        margin-top: 20px;
-    }
-
-    .logo {
-        max-width: 120px;
-    }
-}
-
-@media (max-width: 576px) {
-    .logo {
-        max-width: 100px;
-    }
+.profile-text h1 {
+    margin-bottom: 3rem;
+    text-align: center;
+    font-weight: bold;
 }
 
 
 /*MEDIA QUERYS*/
 
+@media (max-width: 768px) {
+    .brand-section,
+    .profile-section {
+        flex-direction: column;
+        text-align: center;
+        padding: 1rem;
+    }
+
+    .brand-text,
+    .profile-text {
+        max-width: 90%; /*ajustar aqui caso queira maior*/
+        margin-top: 1rem;
+    }
+}
+
+/*MEDIA QUERY MARGEM*/
+
 @media (min-width: 901px) {
 
-    .brand-container {
+    .brand-container,
+    .profile-container {
         padding-left: clamp(4px, 10vw, 464px);
         padding-right: clamp(4px, 10vw, 384px);
     }
