desenvolvendo quarta e quinta seção da página sobre

--- a/src/css/sobre.css
+++ b/src/css/sobre.css
@@ -20,14 +20,15 @@ body {
 /*SEÇÃO 1 e 2*/
 
 .brand-container {
-    background-color: rgba(220, 114, 14, 0.7); /* 70% de opacidade */
+    background-color: rgba(220, 114, 14, 0.7);
+    /* 70% de opacidade */
     color: var(--BrancoSuave);
 }
 
 .profile-container {
     background-color: var(--Fundo);
     color: var(--Marrom);
- }
+}
 
 .brand-section,
 .profile-section {
@@ -35,11 +36,13 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 2rem;
+    /*ajustar talvez colocar um gap aqui e fazer media query, não estou satisfeito como tá o layout ainda*/
 }
 
 .brand-logo,
 .profile-image {
-    max-width: 70%; /*ajustar caso queira maior*/
+    max-width: 70%;
+    /*ajustar caso queira maior*/
 }
 
 .profile-section img {
@@ -49,6 +52,7 @@ body {
 .brand-text,
 .profile-text {
     max-width: 60%;
+    padding: 0 1rem; /*ajustar aqui sobre a responsividade*/
 }
 
 .brand-text h1 {
@@ -61,10 +65,67 @@ body {
     font-weight: bold;
 }
 
+/*SEÇÃO DE PRODUÇÃO FI*/
+
+.production-container {
+    background-image: url('../elements/imgs/fundo-artesao-trabalhando.jpg');
+    background-size: cover;
+    background-position: center;
+    /* height: 100vh; Ocupa toda a altura da janela */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5rem 0;
+}
+
+.production-content {
+    background-color: var(--Laranja);
+    color: var(--BrancoSuave);
+    padding: 2rem 3rem;
+    max-width: 600px; /* ajustar caso queira bloco maior */
+    text-align: center;
+    border-radius: 0.5rem; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+}
+
+.production-content h2 {
+    font-weight: bold;
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+}
+
+
+/*SEÇÃO ESCRITA SOBRE O CHICO*/
+
+.about-container {
+    color: var(--Marrom);
+    text-align: center;
+    padding: 2rem;
+    margin: 2rem 0;
+}
+
+.about-section {
+    border-top: 4px solid var(--Marrom);
+    border-bottom: 4px solid var(--Marrom);
+    padding: 2rem 0;
+}
+
+.about-container h2 {
+    font-weight: bold;
+    margin-bottom: 2rem;
+    font-size: 2rem;
+}
+
+.about-container p {
+    font-size: 1rem;
+    line-height: 1.5;
+}
+
 
 /*MEDIA QUERYS*/
 
 @media (max-width: 768px) {
+
     .brand-section,
     .profile-section {
         flex-direction: column;
@@ -74,7 +135,8 @@ body {
 
     .brand-text,
     .profile-text {
-        max-width: 90%; /*ajustar aqui caso queira maior*/
+        max-width: 90%;
+        /*ajustar aqui caso queira maior*/
         margin-top: 1rem;
     }
 }
@@ -84,7 +146,9 @@ body {
 @media (min-width: 901px) {
 
     .brand-container,
-    .profile-container {
+    .profile-container,
+    .about-container,
+    .production-container {
         padding-left: clamp(4px, 10vw, 464px);
         padding-right: clamp(4px, 10vw, 384px);
     }
